[project]
name = "hl2ss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "numpy>=2.3.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "requests>=2.32.4",
]
